fulfilled api calls
created client and fixed token service